# flext-dbt-ldap

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak.20251223_133314  .token  AGENTS.md  CLAUDE.local.md  CLAUDE.md  LITERALS_ENUMS_IMPROVEMENTS.md  LITERALS_ENUMS_IMPROVEMENTS.md.bak  Makefile  Makefile.bak  Makefile.bak.20251212_162258  Makefile.build  README.md  __init__.py  base.mk  conftest.py  custom.mk  custom.mk.rej  dbt_project.yml  docker-compose.yml  flext-dbt-ldap.ruff.sarif  flext-repo-map.toml  history  history.json  mkdocs.yml  profiles.yml  pyproject.toml
.github/workflows/: ci.yml
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  (+244 more)
.mypy_cache/3.13/PIL/: ExifTags.data.json  ExifTags.meta.json  GimpGradientFile.data.json  GimpGradientFile.meta.json  GimpPaletteFile.data.json  GimpPaletteFile.meta.json  ImageMode.data.json  ImageMode.meta.json  PaletteFile.data.json  PaletteFile.meta.json  TiffTags.data.json  TiffTags.meta.json  __init__.data.json  __init__.meta.json  _binary.data.json  _binary.meta.json  _deprecate.data.json  _deprecate.meta.json  _imaging.data.json  _imaging.meta.json  _version.data.json  _version.meta.json
.mypy_cache/3.13/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  compat.data.json  compat.meta.json  freeze_support.data.json  freeze_support.meta.json  stash.data.json  stash.meta.json  tracemalloc.data.json  tracemalloc.meta.json  warning_types.data.json  warning_types.meta.json
.mypy_cache/3.13/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json
.mypy_cache/3.13/annotated_doc/: __init__.data.json  __init__.meta.json  main.data.json  main.meta.json
.mypy_cache/3.13/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.13/argcomplete/: __init__.data.json  __init__.meta.json  completers.data.json  completers.meta.json  exceptions.data.json  exceptions.meta.json  finders.data.json  finders.meta.json  io.data.json  io.meta.json  lexers.data.json  lexers.meta.json  shell_integration.data.json  shell_integration.meta.json
.mypy_cache/3.13/asyncio/: coroutines.data.json  coroutines.meta.json  exceptions.data.json  exceptions.meta.json  mixins.data.json  mixins.meta.json  threads.data.json  threads.meta.json  timeouts.data.json  timeouts.meta.json
.mypy_cache/3.13/attr/: __init__.data.json  __init__.meta.json  _cmp.data.json  _cmp.meta.json  _typing_compat.data.json  _typing_compat.meta.json  _version_info.data.json  _version_info.meta.json  converters.data.json  converters.meta.json  exceptions.data.json  exceptions.meta.json  filters.data.json  filters.meta.json  setters.data.json  setters.meta.json  validators.data.json  validators.meta.json
.mypy_cache/3.13/attrs/: __init__.data.json  __init__.meta.json
.mypy_cache/3.13/backoff/: _wait_gen.data.json  _wait_gen.meta.json
.mypy_cache/3.13/cachetools/: __init__.data.json  __init__.meta.json
.mypy_cache/3.13/dns/: enum.data.json  (+45 more)
.reports/check/: check-report.md  check-report.sarif  flext-dbt-ldap-pyrefly.json
.reports/docs/: audit-report.md  audit-summary.json  build-report.md  build-summary.json  fix-report.md  fix-summary.json  generate-report.md  generate-summary.json  validate-report.md  validate-summary.json
.scope/: config.toml  graph.db-shm  graph.db-wal
.serena/: project.yml
docs/: README.md  index.md
docs/api-reference/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
guides/: configuration.md  development.md  getting-started.md  skill-automation-pattern.md  testing.md  troubleshooting.md
libs/: __init__.py  discovery.py  git.py  paths.py  reporting.py  selection.py  subprocess.py  versioning.py
macros/: ldap_macros.sql  schema_mapping.sql
models/marts/: dim_groups.sql  dim_users.sql  fact_memberships.sql  schema.yml
models/staging/: schema.yml  stg_groups.sql  stg_org_units.sql  stg_users.sql
reports/: coverage.xml
scripts/: README.md
scripts/check/: fix_pyrefly_config.py
snapshots/: ldap_entries_snapshot.sql
src/: __init__.py
src/flext_dbt_ldap/: __init__.py  __init__.pyi  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _settings.py  api.py  base.py  config.py  constants.py  dbt_client.py  dbt_config.py  dbt_exceptions.py  dbt_models.py  dbt_services.py  deprecation_warnings.py  errors.py  exceptions.py  history  history.json  ldap_integration.py  macros.py  models.py  protocols.py  settings.py  settings.py.bak.20251229_095108  simple_api.py  simple_api.py.backup  simple_api.py.bak.20251229_095155  type_aliases.py  typings.py  utilities.py  version.py  version_info.py
tests/: README.md  __init__.py  base.py  conftest.py  conftest_project.py  constants.py  models.py  protocols.py  settings.py  test_macros.sql  typings.py  utilities.py
tests/e2e/: __init__.py  conftest.py  test_dbt_e2e.py
tests/fixtures/: __init__.py
tests/generic/: test_data_quality.sql
tests/helpers/: constants.py
tests/unit/: __init__.py  test_connection_profile.py  test_constants_flat_api.py  test_dbt_services_sync.py  test_version.py
(+1775 files in other folders)
