[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dbt-ldap"
version = "0.5.0"
description = "PyAuto Enterprise - dbt-ldap component"
authors = [ "Marlon Costa <marlon.costa@datacosmos.com.br>",]
license = "MIT"
readme = "README.md"
repository = "https://github.com/datacosmos-br/dbt-ldap"
documentation = "https://github.com/datacosmos-br/dbt-ldap/blob/main/README.md"
keywords = [ "pyauto", "enterprise", "data", "integration",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Database", "Topic :: System :: Systems Administration", "Typing :: Typed",]
[[tool.poetry.packages]]
include = "dbt_ldap"
from = "src"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true

[tool.black]
line-length = 88
target-version = [ "py39",]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
targets = [ "src",]
exclude_dirs = [ "tests", "build", "dist",]
skips = [ "B101", "B601",]

[tool.poetry.dependencies]
python = "^3.9,<4.0"
pydantic = "^2.11.0"
typing-extensions = "^4.12.0"
dbt-core = "^1.9.0"
ldap3 = "^2.9.1"
click = "^8.1.7"
pyyaml = "^6.0.2"
jinja2 = "^3.1.4"
networkx = "^2.8.8"
sqlparse = "^0.5.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/datacosmos-br/dbt-ldap/issues"
Changelog = "https://github.com/datacosmos-br/dbt-ldap/blob/main/CHANGELOG.md"

[tool.ruff.lint]
select = [ "ALL",]
ignore = ["A002", "ANN401", "ARG001", "ARG002", "E501", "INP001", "S106", "S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [ "--strict-markers", "--strict-config", "--verbose", "--tb=short", "--cov=src", "--cov-report=term-missing:skip-covered", "--cov-report=html:reports/coverage", "--cov-report=xml:reports/coverage.xml", "--cov-fail-under=85", "--junitxml=reports/pytest.xml", "--maxfail=10", "--tb=short",]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
markers = [ "slow: marks tests as slow (deselect with '-m \"not slow\"')", "integration: marks tests as integration tests", "unit: marks tests as unit tests", "e2e: marks tests as end-to-end tests", "smoke: marks tests as smoke tests", "regression: marks tests as regression tests", "security: marks tests as security tests", "performance: marks tests as performance tests",]
filterwarnings = [ "error", "ignore::UserWarning", "ignore::DeprecationWarning", "ignore::PendingDeprecationWarning",]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
branch = true
source = [ "src",]
omit = [ "*/tests/*", "*/test_*", "*/*_test.py", "*/conftest.py", "*/__pycache__/*", "*/site-packages/*", "*/.venv/*", "*/venv/*", "*/build/*", "*/dist/*", "*/.eggs/*",]
data_file = "reports/.coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = false
show_missing = true
sort = "Cover"
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod", "TYPE_CHECKING",]

[tool.coverage.html]
directory = "reports/coverage"
title = "dbt-ldap Coverage Report"

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.bandit.assert_used]
skips = [ "*/tests/*", "*/test_*.py",]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ "S101", "PLR2004", "D",]
"examples/*" = [ "T201", "D", "ERA001",]
"__init__.py" = [ "D104",]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.4"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.0"
types-requests = "^2.32.0"
types-setuptools = "^75.6.0"
pre-commit = "^4.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
ipython = "^8.12.0"
rich = "^13.9.0"

[tool.poetry.group.security.dependencies]
safety = "^3.2.0"
bandit = {extras = ["toml"], version = "^1.8.0"}

[tool.poetry.group.build.dependencies]
build = "^1.2.0"
twine = "^6.0.0"
